# clap-action

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
clap_action/: math.py
tests/: test_clap_action.py  test_clap_action_math.py
