[tool.poetry]
name = "clap-action"
version = "0.1.0"
description = "Github Actions Workshop"
authors = ["Naveen Thurimerla <nawinto99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
